syntax = "proto3";

package prometheus;

option go_package = "github.com/your-username/prometheus-protocol/proto";

// PromptTemplate represents a template for generating prompts.
message PromptTemplate {
  string id = 1;
  string template_string = 2;
  map<string, string> default_context_modifiers = 3;
}

// PromptGenerationRequest represents a request to generate a prompt.
message PromptGenerationRequest {
  string template_id = 1;
  map<string, string> dynamic_variables = 2;
  map<string, string> context_modifiers = 3;
}

// GeneratedPrompt represents a generated prompt.
message GeneratedPrompt {
  string prompt_string = 1;
  map<string, string> metadata = 2;
}

// OptimizationFeedback represents feedback on a generated prompt.
message OptimizationFeedback {
  string prompt_id = 1;
  float response_quality_score = 2;
  float user_satisfaction_score = 3;
  bool task_success_status = 4;
  string feedback_text = 5;
}

// PromptOptimizationState represents the optimization state of a prompt template.
message PromptOptimizationState {
  string prompt_template_id = 1;
  int32 current_version = 2;
  repeated OptimizationFeedback performance_history = 3;
}
